# SoupeUp

./: .gitignore  README.md  commands.txt
clients/: README.md  (+3 more)
cluster-runtime/sdk/python/: README.md  pyproject.toml
cluster-runtime/sdk/python/cluster_sdk/: __init__.py
cluster-runtime/src-tauri/: Cargo.toml  tauri.conf.json
cluster-runtime/src-tauri/resources/python/: .gitkeep  README.md
cluster-runtime/src-tauri/src/: bootstrap.rs  lib.rs  main.rs
cluster-runtime/src-tauri/src/api_server/: auth.rs  mod.rs  routes.rs  ws.rs
cluster-runtime/src-tauri/src/commands/: mod.rs
cluster-runtime/src-tauri/src/config/: mod.rs
cluster-runtime/src-tauri/src/core/: mod.rs
cluster-runtime/src-tauri/src/dask/: MANUAL_TESTING.md  README.md  adapter.rs  mod.rs  process_util.rs  types.rs
cluster-runtime/src-tauri/src/events/: mod.rs
cluster-runtime/src-tauri/src/jobs/: history.rs  mod.rs  tests.rs
cluster-runtime/src-tauri/src/logging/: mod.rs
cluster-runtime/src-tauri/src/metrics/: mod.rs
cluster-runtime/src-tauri/src/mpi/: adapter.rs  mod.rs  types.rs
cluster-runtime/src-tauri/src/network/: authentication.rs  cluster.rs  discovery.rs  heartbeat.rs  messages.rs  mod.rs  peers.rs  transport.rs
cluster-runtime/src-tauri/src/nodes/: mod.rs
cluster-runtime/src-tauri/src/plugin_api/: mod.rs
cluster-runtime/src-tauri/src/plugin_host/: mod.rs
cluster-runtime/src-tauri/src/plugin_loader/: manifest.rs  mod.rs
cluster-runtime/src-tauri/src/plugin_registry/: mod.rs
cluster-runtime/src-tauri/src/plugin_security/: mod.rs
cluster-runtime/src-tauri/src/plugin_store/: mod.rs
(+206 files in other folders)
