[package]
name = "cluster-runtime"
version = "0.1.0"
description = "Cluster Runtime - Distributed compute node management"
authors = ["Cluster Runtime Contributors"]
edition = "2021"

[lib]
name = "cluster_runtime_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
thiserror = "2"
log = "0.4"
parking_lot = "0.12"
libloading = "0.9.0"
toml = "1.1.3"
semver = "1.0.28"
tokio = { version = "1.52.3", features = ["full", "net", "rt", "time", "sync", "macros"] }
sysinfo = "0.39.6"
tokio-util = { version = "0.7", features = ["codec"] }
tokio-native-tls = "0.3"
bytes = "1"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.21"
rand_core = { version = "0.6", features = ["getrandom"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
