[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cluster-sdk"
version = "0.1.0"
description = "Scheduler-agnostic Python SDK for Cluster Runtime"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["cluster_sdk*"]
